tests/expectations/parser-statement/statement/definition_fail.out
{
  "Definition": {
    "place": {
      "Single": {
        "name": "x",
        "span": {
          "lo": 4,
          "hi": 5
        },
        "id": 0
      }
    },
    "type_": null,
    "value": {
      "Path": {
        "qualifier": [],
        "identifier": {
          "name": "expr",
          "span": {
            "lo": 8,
            "hi": 12
          },
          "id": 1
        },
        "absolute_path": null,
        "span": {
          "lo": 8,
          "hi": 12
        },
        "id": 2
      }
    },
    "span": {
      "lo": 0,
      "hi": 12
    },
    "id": 3
  }
}

Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> test_1:1:9
     |
   1 | let x = ();
     |         ^^
Error [EPAR0370005]: expected : -- found '='
    --> test_5:1:9
     |
   1 | const x = expr;
     |         ^
Error [EPAR0370005]: expected : -- found '='
    --> test_6:1:9
     |
   1 | const x = ();
     |         ^
Error [EPAR0370005]: expected : -- found '='
    --> test_7:1:9
     |
   1 | const x = x+y;
     |         ^
Error [EPAR0370005]: expected : -- found '='
    --> test_8:1:9
     |
   1 | const x = (x,y);
     |         ^
Error [EPAR0370005]: expected : -- found '='
    --> test_9:1:9
     |
   1 | const x = x();
     |         ^
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> test_11:1:14
     |
   1 | let x: u32 = ();
     |              ^^
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> test_16:1:16
     |
   1 | const x: u32 = ();
     |                ^^
Error [EPAR0370045]: Expected an identifier.
    --> test_20:1:10
     |
   1 | let (x,y,,) = ();
     |          ^
Error [EPAR0370045]: Expected an identifier.
    --> test_21:1:6
     |
   1 | let (,x,y) = ();
     |      ^
Error [EPAR0370045]: Expected an identifier.
    --> test_22:1:8
     |
   1 | let (x,,y) = ();
     |        ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_23:1:16
     |
   1 | let x: [u8; (2,,)] = [[0,0], [0,0]];
     |                ^
Error [EPAR0370005]: expected 'address', 'bool', 'field', 'Future', 'group', 'scalar', 'signature', 'string', 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128' -- found 'const'
    --> test_24:1:8
     |
   1 | let x: const = expr;
     |        ^^^^^
Error [EPAR0370005]: expected 'address', 'bool', 'field', 'Future', 'group', 'scalar', 'signature', 'string', 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128' -- found 'let'
    --> test_25:1:10
     |
   1 | const x: let = expr;
     |          ^^^
Error [EPAR0370005]: expected ( -- found '<eof>'
    --> test_26:1:1
     |
   1 | let
     | ^^^
Error [EPAR0370005]: expected = -- found '<eof>'
    --> test_27:1:5
     |
   1 | let x
     |     ^
Error [EPAR0370005]: expected 'address', 'bool', 'field', 'Future', 'group', 'scalar', 'signature', 'string', 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128' -- found '<eof>'
    --> test_28:1:6
     |
   1 | let x:
     |      ^
Error [EPAR0370005]: expected ) -- found ']'
    --> test_29:1:14
     |
   1 | let x = (a, y]);
     |              ^
Error [EPAR0370005]: expected ( -- found '='
    --> test_30:1:5
     |
   1 | let = 1u8;
     |     ^
Error [EPAR0370005]: expected ( -- found ';'
    --> test_31:1:4
     |
   1 | let;
     |    ^
Error [EPAR0370005]: expected = -- found '1'
    --> test_32:1:7
     |
   1 | let x 1u8;
     |       ^
Error [EPAR0370005]: expected = -- found ';'
    --> test_33:1:10
     |
   1 | let x: u8;
     |          ^
Error [EPAR0370005]: expected = -- found '<eof>'
    --> test_34:1:8
     |
   1 | let x: u8
     |        ^^
Error [EPAR0370005]: expected 'address', 'bool', 'field', 'Future', 'group', 'scalar', 'signature', 'string', 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128' -- found '='
    --> test_35:1:8
     |
   1 | let x: = 1;
     |        ^
Error [EPAR0370005]: expected ; -- found ']'
    --> test_36:1:11
     |
   1 | let x: [u8] = 1;
     |           ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_37:1:11
     |
   1 | let x: [u8;
     |           ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_38:1:22
     |
   1 | let x: [u8; 1u8] = [1,
     |                      ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ']'
    --> test_39:1:15
     |
   1 | let dbg: u8 = ];
     |               ^
Error [EPAR0370016]: Could not lex the following content: `🦀:`.

Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test_41:1:11
     |
   1 | let (x) = ...;
     |           ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test_42:1:12
     |
   1 | let (x,) = ...;
     |            ^^
Error [EPAR0370005]: expected ( -- found '_'
    --> test_43:1:5
     |
   1 | let _1: u8 = 1u8;
     |     ^
Error [EPAR0370005]: expected ( -- found '1___091'
    --> test_44:1:5
     |
   1 | let 1___091: u8 = 12u8;
     |     ^^^^^^^
